fix(styles): header dropdown menu overlaping

--- a/src/components/shared/header/header.module.scss
+++ b/src/components/shared/header/header.module.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   height: $header-height;
   background-color: transparent;
   transition: background-color $transition-base;
